--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,25 +2,22 @@
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
+orbs:
+  tfsec: mycodeself/tfsec-orb@1.0.5
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+    tfsec-tests:
+    executor: tfsec/default
     steps:
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Some Testing!"
-
+      - tfsec/scan:
+          directory: infrastrucuture
+          exclude-checks: GEN001,GCP001,GCP002
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
-      - say-hello
+      - tfsec-tests
