--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       steps:
         - checkout
         - tfsec/scan:
-            directory: infrastrucuture
+            directory: infrastructure
             exclude-checks: GEN001,GCP001,GCP002
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
