--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,8 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
 orbs:
   tfsec: mycodeself/tfsec@1.1.0
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
   tfsec-tests:
     executor: tfsec/default
@@ -27,8 +23,23 @@ jobs:
           root: .
           paths:
             - .
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+
+  terraform-validate:
+    docker:
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: terraform
+          command: |
+            cd infrastructure  \
+            && terraform validate \
+            && terraform plan
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
 workflows:
   #  tests-workflow:
   #    jobs:
@@ -36,3 +47,4 @@ workflows:
   terraform-workflow:
     jobs:
       - terraform-init
+      - terraform-validate
