--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             mkdir "$TF_VAR_pub_key_path"
             echo "$SSH_PUBLIC_KEY" > "$TF_VAR_pub_key_path"/"$TF_VAR_pub_key_filename"
             terraform init -input=false
-            terraform plan -out tfapply -var-file 01-terraform.tfvars
+            terraform plan -out tfapply -var-file terraform.tfvars
       - persist_to_workspace:
           root: .
           paths:
@@ -61,7 +61,7 @@ jobs:
           name: terraform create destroy plan
           command: |
             cd infrastructure
-            terraform plan -destroy -out tfdestroy -var-file 01-terraform.tfvars
+            terraform plan -destroy -out tfdestroy -var-file terraform.tfvars
       - persist_to_workspace:
           root: .
           paths:
