--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,11 +45,7 @@ jobs:
       - run:
           name: terratest
           command: |
-            ls -la /go
-            ls -la /go/src
-            ls -la /go/src/terratest
-            ls -la .
-            go test infra_test.go
+            go test /go/src/terratest/infra_test.go
       - persist_to_workspace:
           root: .
           paths:
