--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
           name: cd
           command: |
             cd test
-            go infrastructure-test.go
+            go run infrastructure-test.go
       - persist_to_workspace:
           root: .
           paths:
