--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,8 @@ jobs:
           name: cd
           command: |
             cd test
+            go mod init github.com/wexire/webserver-ec2-module-terraform \
+            && go mod tidy 
             go run infrastructure-test.go
       - persist_to_workspace:
           root: .
