--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
             cd test
             go mod init github.com/YapieRT/webserver-ec2-module-terraform \
             && go mod tidy 
-            go run infrastructure-test.go
+            go test infrastructure-test.go
       - persist_to_workspace:
           root: .
           paths:
