--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,10 +62,31 @@ jobs:
 
   infrastructure-test:
     docker:
-      - image: hashicorp/terraform
+      - image: golang:1.21.3
     steps:
       - attach_workspace:
           at: .
+      - run:
+          name: Install Terraform
+          command: |
+            apt-get update && apt-get install -y gnupg software-properties-common 
+
+            wget -O- https://apt.releases.hashicorp.com/gpg | \
+            gpg --dearmor | \
+            tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
+
+            gpg --no-default-keyring \
+            --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg \
+            --fingerprint
+
+            echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \
+            https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
+            tee /etc/apt/sources.list.d/hashicorp.list
+
+            apt update
+
+            apt-get install terraform -y
+
       - run:
           name: Test
           command: |
