--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
           name: Terraform Apply
           command: |
             export $(cat .env)
-            cd Infrastructure
+            cd infrastructure
             terraform apply -auto-approve
       - persist_to_workspace:
           root: .
